[Fix] Bug where text decoration underline would be visible on some browsers

--- a/source/stylesheets/about.scss
+++ b/source/stylesheets/about.scss
@@ -2,7 +2,7 @@
 .about:link{color:#B2B2B2;}
 .about:visited{color:#B2B2B2;}
 .about:active{color:#B2B2B2;}
-.about:hover{color:#B2B2B2;text-decoration:underline;}
+.about:hover{color:#B2B2B2;}
 
 #about {
 
@@ -36,7 +36,7 @@
 .about:hover {
 
   color: #B2B2B2;
-  text-decoration: underline;
+
 
 }
 
@@ -71,5 +71,5 @@
 
 .about:hover {
   color: #B2B2B2;
-  text-decoration: underline;
+
 }
