--- a/source/stylesheets/albums.scss
+++ b/source/stylesheets/albums.scss
@@ -1,5 +1,5 @@
 #albums{position:relative;top:20px;left:35px;width:250px;height:110px;font-family:"presicav",sans-serif;text-transform:uppercase;font-size:12px;text-align:center;line-height:17px;z-index:4;}
-.album:hover{text-decoration:underline;}
+.album:hover{}
 
 .albumbar {
   height:24px;
@@ -154,7 +154,7 @@ span#description,
 
 .album:hover {
 
-  text-decoration: underline;
+
 
 }
 
@@ -177,6 +177,6 @@ span#description,
 
 .album:hover {
 
-  text-decoration: underline;
+
 
 }
