--- a/source/stylesheets/credits.scss
+++ b/source/stylesheets/credits.scss
@@ -18,6 +18,6 @@
 #credits a {
 
   color: #AAA;
-  text-decoration: underline;
+
 
 }
